--- a/app/src/main/res/layout/note_layout.xml
+++ b/app/src/main/res/layout/note_layout.xml
@@ -5,10 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageButton
+        android:id="@+id/btnDelete"
+        android:layout_width="47dp"
+        android:layout_height="39dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_delete" />
+
     <TextView
         android:id="@+id/tvNote"
-        android:layout_width="107dp"
-        android:layout_height="35dp"
+        android:layout_width="259dp"
+        android:layout_height="40dp"
         android:text="TextView"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -16,10 +24,11 @@
 
     <TextView
         android:id="@+id/tvTime"
-        android:layout_width="102dp"
-        android:layout_height="17dp"
+        android:layout_width="72dp"
+        android:layout_height="21dp"
+        android:layout_marginTop="12dp"
         android:text="TextView"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
